<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/dialogHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_dialog_header_height"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="@dimen/size_dialog_header_icon"
            android:layout_height="@dimen/size_dialog_header_icon"
            android:layout_centerInParent="true"
            android:tint="@android:color/white"
            app:srcCompat="@drawable/ic_contact" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/dialogContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_large">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Name"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Surname"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Number"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_dialog_footer_height"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="@dimen/space_small">

        <Button
            android:id="@+id/btNegative"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:text="@string/Cancel"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btPositive"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:text="@string/Done"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</LinearLayout>